# document-generator

./: .gitignore  Dockerfile  README.md  ROADMAP.md  docker-compose.example.yml  docker-stack.yml_copy  pyproject.toml
app/: .env.example  main.py
app/api/: injection.py  metadata.py  router.py  schemas.py
app/api/routes/: health.py
app/api/routes/process/: __init__.py  docx.py  router.py
app/api/routes/template/: __init__.py  router.py  template.py  template_version.py
app/core/: config.py  logs.py
app/internal/: mixin.py  webclient.py
app/internal/docx/: __init__.py  const.py  errors.py  filters.py  formulas.py  generator.py  models.py  regexp.py
app/internal/storage/: __init__.py  local_storage.py  storage.py
app/internal/template/: __init__.py  entity.py  errors.py  factory.py  meta.py  payload.py  repo.py  schema.py  storage_repo.py  validator.py  version.py
tests/: factory.py
tests/mock/: template_mock.py
tests/static/templates_for_test/2077a371-1d3d-4931-9d2d-8f7eeb18c1b4/: meta.yaml
tests/static/templates_for_test/2077a371-1d3d-4931-9d2d-8f7eeb18c1b4/versions/v0.0.1/: meta.yaml  template.docx  template.json
tests/static/templates_for_test/aa1e8746-5f0a-4256-891e-a1d11641166a/: meta.yaml
tests/static/templates_for_test/af719903-e75b-4627-a782-36ec45636013/: meta.yaml
tests/unit/storage/: conftest.py  test_local_storage.py
tests/unit/template/: conftest.py  test_meta.py  test_payload_validation.py  test_template.py  test_template_factory.py  test_template_repo.py  test_validator.py  test_version.py
(+6 files in other folders)
